--- a/Four/css/style.css
+++ b/Four/css/style.css
@@ -16,6 +16,7 @@ html, body{
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 
 .hero-text{
