--- a/seven/styles/style.css
+++ b/seven/styles/style.css
@@ -1,20 +1,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
 
 /* Shared styles */
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
+
 .lato {
-  font-family: "Lato", sans-serif;
+    font-family: "Lato", sans-serif;
 }
-.container{
+
+.container {
     max-width: 1440px;
     margin: 0 auto;
 }
 
-.btn-primary{
+.btn-primary {
     background-color: #E55473;
     color: #ffffff;
     font-size: 1.2rem;
@@ -22,27 +24,227 @@
     padding: 20px 40px;
     border: none;
     border-radius: 10px;
+    transition: background-color 0.5s ease, color 0.5s ease, border 0.5s ease;
 }
+
+.btn-primary:hover {
+    background-color: #ffffff;
+    color: #E55473;
+    border: 2px solid #E55473;
+}
+
+.section_text h2 {
+    font-size: 2.5rem;
+    font-weight: bolder;
+    color: #272727;
+}
+
+.section_text p {
+    color: rgba(39, 39, 39, 0.6);
+    font-size: 1.1rem;
+    line-height: 30px;
+    margin: 30px 0px;
+}
+
 /* Header Section */
-#header{
+#header {
     background-color: rgba(229, 84, 115, 0.1);
 }
-.banner{
+
+.banner {
     padding-top: 50px;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-.header_text{
+
+.header_text {
     max-width: 700px;
 }
-.header_text h2{
+
+.header_text h2 {
     font-size: 5rem;
     font-weight: bolder;
 }
-.header_text p{
+
+.header_text p {
     font-size: 1.1rem;
     color: rgba(39, 39, 39, 0.6);
     line-height: 30px;
     margin: 30px 0px;
+}
+
+/* Main section */
+
+.our_feature {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    margin-top: 140px;
+    width: 100%;
+}
+
+.features_text {
+    max-width: 600px;
+}
+
+.features_items {
+    display: flex;
+    gap: 60px;
+    text-align: center;
+}
+
+.feature_image {
+    max-width: 460px;
+    width: 100%;
+    height: 300px;
+    background-color: rgba(167, 33, 98, 0.15);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 80px 60px 0 60px;
+    border-radius: 50% 50% 0 0;
+    margin-bottom: 30px;
+}
+
+.feature_item img {
+    max-width: 100%;
+    max-height: 100%;
+    width: auto;
+    height: auto;
+}
+
+.feature_item a {
+    text-decoration: none;
+    color: #272727;
+    font-size: 1.5rem;
+    border-bottom: 2px solid #272727;
+}
+
+/* Feature Banner section */
+
+.feature_banner_items {
+    margin: 150px 0px;
+    background-color: rgba(39, 39, 39, 0.05);
+    display: flex;
+    justify-content: space-around;
+    padding: 50px 0px;
+    text-align: center;
+}
+
+.features_banner_item:hover {
+    background-color: #e5547333;
+}
+
+/* Hot deals section */
+.hot_deals {
+    background-color: #e5547333;
+}
+
+.hot_deal {
+    max-width: 540px;
+}
+
+.hot_deals_text {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 100px 0px;
+}
+
+/* Instgram */
+.insta_items {
+    text-align: center;
+    margin-top: 50px;
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+    justify-content: center;
+    align-items: center;
+}
+
+.instext {
+    max-width: 600px;
+}
+
+.insta_images {
+    display: flex;
+    gap: 40px;
+    justify-content: space-around;
+}
+
+/* Subscription sections  */
+
+.subscriber_section {
+    text-align: center;
+    margin-top: 100px;
+    margin-bottom: 100px;
+    background-image: url('../Flower\ Asset/Rectangle 9.png');
+    padding: 100px 0px;
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+    justify-content: center;
+    align-items: center;
+}
+
+input {
+    width: 700px;
+    height: 64px;
+    margin-right: 20px;
+    border: none;
+    padding: 20px;
+}
+
+.ddvv {
+    display: flex;
+}
+
+/* responsive  */
+
+@media screen and (max-width: 576px) {
+    .banner {
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .header_text {
+        max-width: 100%;
+    }
+
+    .header_text h2 {
+        font-size: 2rem;
+        font-weight: bold;
+    }
+    .header_image {
+        margin-top: 30px;
+    }
+
+    .header_image img {
+        width: 80%;
+        margin: 0 auto;
+    }
+
+    .features_items {
+        flex-direction: column;
+    }
+
+    .feature_banner_items{
+        flex-direction: column;
+        gap: 40px;
+    }
+    .hot_deals_text{
+        flex-direction: column;
+        text-align: center;
+    }
+    .insta_images{
+        flex-direction: column;
+        justify-content: center;
+    }
+    .instext{
+       max-width: 380px;
+    }
+
 }
